--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>SciCalc-backend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
