--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,8 @@
 	</dependencies>
 
 	<build>
-		<finalName>SciCalc-backend</finalName>
+		<directory>target</directory>
+		<finalName>SciCalc-backend-0.0.1-SNAPSHOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
